--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     </ul>
 
-    <h1>ALL OF THIS RECIPES AND MOST OF THE TEST ARE FROM <a href="https://www.allrecipes.com/">allrecipes.com/</a></h1>
+    <h3>Credit for these recipes and most of the tests goes to <a href="https://www.allrecipes.com/">allrecipes.com/</a>.</h3>
 </body>
 
 </html>
